--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>MISO: Mixture of Isoforms model for quantitating isoforms from RNA-Seq by yarden</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="MISO: Mixture of Isoforms model for quantitating isoforms from RNA-Seq : MISO" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>MISO: Mixture of Isoforms model for quantitating isoforms from RNA-Seq</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>MISO: Mixture of Isoforms model for quantitating isoforms from RNA-Seq</h1>
-        <p>MISO</p>
 
-        <p class="view"><a href="https://github.com/yarden/MISO">View the Project on GitHub <small>yarden/MISO</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/yarden/MISO">View on GitHub</a>
 
+          <h1 id="project_title">MISO: Mixture of Isoforms model for quantitating isoforms from RNA-Seq</h1>
+          <h2 id="project_tagline">MISO</h2>
 
-        <ul>
-          <li><a href="https://github.com/yarden/MISO/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/yarden/MISO/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/yarden/MISO">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/yarden/MISO/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/yarden/MISO/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>What is MISO?</h3>
 
 <p>MISO (Mixture-of-Isoforms) is a probabilistic framework that quantitates the expression level of alternatively spliced genes from RNA-Seq data, and identifies differentially regulated isoforms or exons across samples. By modeling the generative process by which reads are produced from isoforms in RNA-Seq, the MISO model uses Bayesian inference to compute the probability that a read originated from a particular isoform.</p>
@@ -42,12 +45,17 @@
 
 <p>Also available on readthedocs.org: <a href="http://miso.readthedocs.org">miso.readthedocs.org</a></p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/yarden">yarden</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">MISO: Mixture of Isoforms model for quantitating isoforms from RNA-Seq maintained by <a href="https://github.com/yarden">yarden</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
